# Alone

./: .python-version  Dockerfile  LICENSE  README.md  app.py  config.py  pyproject.toml  setup
.github/: CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.yaml  dependabot.yml
.github/workflows/: block.yml  codacy.yml  main.yml
AloneMusic/: __init__.py  __main__.py  config.py  misc.py
AloneMusic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
AloneMusic/core/: bot.py  call (8).py  call.py  dir.py  git.py  mongo.py  userbot.py
AloneMusic/plugins/admins/: auth.py  callback.py  skip.py
AloneMusic/plugins/bot/: help.py  inline.py  settings.py  start.py
AloneMusic/plugins/misc/: broadcast.py  watcher.py
AloneMusic/plugins/play/: play.py  playmode.py
AloneMusic/plugins/sudo/: autoend.py  blchat.py  gban.py  logs.py  maintenance.py  restart.py
AloneMusic/plugins/tools/: Jc.py  Num.py  active.py  disk.py  language.py  queue.py  reload.py  speedtest.py
AloneMusic/utils/: admin_check.py  admin_filters.py  database.py  extraction.py  inlinequery.py  ndatabase.py  thumbnails.py
AloneMusic/utils/decorators/: admins.py  play.py
AloneMusic/utils/inline/: help.py  play.py  queue.py  settings.py
AloneMusic/utils/stream/: stream.py
config/: config.py
cookies/: cookies.txt
strings/: __init__.py  helpers.py
strings/langs/: en.yml
