[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AloneMusic"
version = "0.1.0"
description = "🎵 Advanced Telegram Music Bot by TheAloneTeam — PyroFork + ntgcalls + YouTube + Spotify"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "TheAloneTeam", email = "thealoneteam@github.com" }
]
keywords = ["telegram", "music", "bot", "pyrogram", "pyrofork", "pytgcalls", "youtube", "spotify"]
classifiers = [
  "Environment :: Console",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet",
  "Topic :: Utilities",
]

# ───────────────────────────────
# 🔧 CORE DEPENDENCIES
# ───────────────────────────────
dependencies = [
    # Async & Web
    "aiofiles",
    "aiohttp>=3.9.5",
    "apscheduler",
    "beautifulsoup4",
    "dnspython",
    "gitpython",
    "hachoir",
    "httpx==0.27.2",
    "humanize",
    "requests",
    "python-dotenv",
    "pyyaml",
    "unidecode",

    # Telegram
    "tgcrypto",
    "pyrofork>=2.3.45",
    "pykeyboard",

    # Voice / Music Framework
    "ffmpeg-python",
    "ntgcalls==1.1.2",
    "py-tgcalls==1.2.9",

    # Database / Utility
    "motor>=3.4.0",
    "psutil",
    "heroku3",

    # Image / Media
    "Pillow==9.5.0",

    # Speedtest & Tools
    "speedtest-cli",

    # Music & Streaming
    "spotipy",
    "yt-dlp>=2025.02.01",
    "youtube-search",
    "youtube-search-python>=1.6.6",
    "pytube>=15.0.0",
    "ytmusicapi>=1.4.0",

    # Optional AI / Helper
    "openai>=1.40.0",
    "prettytable"
]

[tool.setuptools.packages.find]
include = ["AloneMusic", "core", "config", "strings"]

[project.urls]
Repository = "https://github.com/TheAloneTeam/AloneMusic"
Issues = "https://github.com/TheAloneTeam/AloneMusic/issues"
Changelog = "https://github.com/TheAloneTeam/AloneMusic/blob/master/CHANGELOG.md"

[project.scripts]
alonemusic = "AloneMusic.__main__:main"
